feat(upload file): upload csv file to the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8081
+
+# Spring Datasource
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:csv-db
+spring.datasource.username=sa
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
